ディレクトリ分けへ変更

--- a/Template/old/PITCHME.yaml
+++ b/Template/old/PITCHME.yaml
@@ -7,7 +7,7 @@ layout: center-left
 #theme-override : assets/css/PITCHME.css
 
 #ロゴアイコンの設定
-logo : /img/logo_circle96.png
+logo : /img/icon_circle96.png
 
 #フットノートの設定
 footnote : "@yuki476 https://twitter.com/yuki476"
