--- a/20180801_CISSP/PITCHME.yaml
+++ b/20180801_CISSP/PITCHME.yaml
@@ -1,8 +1,6 @@
 #テーマの設定 black, moon, night, beige, sky, and white
 theme : black
-layout: center-left
-
-#css
+### CSS
 #theme-override: css/PITCHME.css
 #theme-override : assets/css/PITCHME.css
 
@@ -14,18 +12,21 @@ footnote : "@yuki476 https://twitter.com/yuki476"
 
 #スライドのページ数表示の設定
 slide-number: true
+layout: center-left
 
 #コードのシンタックスハイライトの設定
 highlight : monokai
 
-#スライド自動再生の設定
-#autoslide : 5000
-
-#スライドのループ設定
-#loop : true
 
 #トランジションの設定 convex, concave, default, fade, none, slide and zoom
 transition : slide
 
 #チャート / グラフ機能の設定
 charts : true
+
+
+####################
+#スライド自動再生の設定
+#autoslide : 5000
+#スライドのループ設定
+#loop : true
